<resources>
    <string name="app_name">InstaStudy</string>
    <string name="login_btn_text">Continue with phone</string>
    <string name="terms_btn_text">Terms and conditions</string>
    <string name="error_login">Login error</string>
    <string name="error_server">Server error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fill_data_screen_title">Setup Profile</string>
    <string name="fill_data_prompt_title">Let us recognize you</string>
    <string name="fill_data_prompt_message">Please tell us you name and study group, so we can find your classmates</string>
    <string name="hint_name">Your name</string>
    <string name="hint_group">Group (ex. SP–14–2)</string>
    <string name="register_btn_text">Set me up, Scotty</string>
    <string name="set_avatar_title">Set Avatar</string>
    <string name="skip_btn_text">Skip</string>
    <string name="set_avatar_prompt_title">We are building your profile</string>
    <string name="set_avatar_prompt_message">You can take a new picture or upload it from your camera roll</string>
    <string name="set_avatar_use_gallery">Use gallery</string>
    <string name="set_image_set_btn">Let\'s go!</string>
    <string name="set_avatar_use_camera">Use camera</string>
    <string name="error_save_name">Error saving name</string>
    <string name="error_save_group">Error saving group</string>
    <string name="error_save_avatar">Error saving user avatar</string>
    <string name="error_get_user">Error fetching user data</string>
    <string name="error_get_group">Error fetching group</string>
    <string name="error_network">Network error</string>
    <string name="schedule_title">Schedule</string>
    <string name="openDrawer">Open drawer</string>
    <string name="closeDrawer">Close drawer</string>

    <string name="menu_item_chat">Group chat</string>
    <string name="menu_item_schedule">Schedule</string>
    <string name="menu_item_teachers">Teachers</string>
    <string name="menu_item_files">Files</string>
    <string name="menu_item_notifications">Notifications</string>
    <string name="week_odd">Odd</string>
    <string name="week_even">Even</string>
    <string name="hint_enter_message">Say something…</string>
    <string name="menu_switch_week">Switch week</string>
    <string name="error_send_message">Error sending message</string>
    <string name="permissions_camera_text">We need access to your camera so you can make some photos</string>
    <string name="grant_access">Grant access</string>
    <string name="error_camera">Looks like your camera is unavailable</string>
    <string name="gallery">Gallery</string>
    <string name="files_tile">Files</string>
    <string name="file_selector_title">Select a File to Upload</string>
    <string name="error_no_file_manager">Please install a File Manager.</string>
    <string name="error_file_upload">Error uploading file</string>
    <string name="error_fetching_files">Error fetching files for this directory</string>
    <string name="dialog_create_directory_title">New directory</string>
    <string name="hint_directory">New directory name</string>
    <string name="error_setup_role">Can\'t setup role</string>
    <string name="error_fetching_notifications">Error fetching notifications</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="starosta">Captain</string>
    <string name="dialog_send_notification_title">Notification title</string>
    <string name="dialog_send_notification_body">Notification body</string>
    <string name="dialog_send_notification">Post notification</string>
    <string name="send">Send</string>
    <string name="error_fields">You need to fill all fields</string>
    <string name="error_send_notification">Error sending notification</string>
    <string name="error_fetching_user">Error loading user info</string>
    <string name="hint_access_code">Access code</string>
    <string name="enter_code_dialog_title">Grant captain permissions</string>
    <string name="confirm">Confirm</string>
    <string name="error_uprising">Error during permission granting</string>
    <string name="dummy_no_notifications">There are no notifications yet</string>
    <string name="files_left">Files left:</string>
</resources>
