<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.ekalips.instastudy.registration.contract.FillDataScreenContract.ViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:background="@drawable/gradient_background"
        tools:context="com.ekalips.instastudy.registration.mvvm.view.FillDataFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/fill_data_screen_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/textColorPrimaryInverted" />


        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/fill_data_icon" />

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fill_data_prompt_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/textColorPrimaryInverted" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/fill_data_prompt_message"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse" />


        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textPersonName|textCapWords"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_group"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:textAllCaps="true"
                android:textColorHint="@color/textColorSecondaryInverted" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <Button
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryWhite"
            android:paddingBottom="22dp"
            android:paddingTop="22dp"
            android:text="@string/register_btn_text"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />


    </LinearLayout>
</layout>